--- a/webserv/site/Assets/main.css
+++ b/webserv/site/Assets/main.css
@@ -1,5 +1,5 @@
 *{text-decoration: none;color: rgb(255, 135, 211);}
-html{background-image: url("./img/sfondo.jpg");height: 100vh;width: 100vw;margin: 0;padding: 0;}
+html{background-image: url("./img/sfondo.jpg");background-repeat: no-repeat;background-size: cover;background-position: center;position: fixed;top: 0;left: 0;height: 100vh;width: 100vw;margin: 0;padding: 0;}
 body{height: 100%;width: 100%;margin: 0;padding: 0;position: fixed;top: 0;}
 .centro,.centro2{background-color: white;border: 2px solid rgb(255, 129, 190);border-radius: 3%;margin-top: 5vh;padding: 30px;}
 .centro{width: 500px;}
