--- a/ft_trans/frontend/app/css/main.css
+++ b/ft_trans/frontend/app/css/main.css
@@ -1,3 +1,5 @@
+.titanic{float: none;}
+
 html, body {background-color: rgb(23, 2, 41);margin: 0;padding: 0;height: 100vh;width: 100vw;}
 .mioform{width: 400px;}
 .w-70{width: 70%;}
@@ -5,6 +7,6 @@ canvas{border: 2px solid white;background-color: #111;}
 .mybg{background-color: rgb(23, 2, 41);}
 .point{cursor: pointer;}
 .invible{display: none;}
-.h-50{min-height: 50vh;}
-
-.titanic{float: none;}
+.h-50{max-height: 51vh;min-height: 50vh;}
+.chatbox{overflow-y: scroll;}
+.chatmsg{word-break: break-word;white-space: pre-wrap;overflow-wrap: break-word;}
